# ChangeLog for dev-python/PyQt4
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/PyQt4/ChangeLog,v 1.119 2010/07/05 14:00:27 ssuominen Exp $

  05 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> PyQt4-4.7.3.ebuild:
  ppc64 stable wrt #315775

  16 Jun 2010; Tomas Touceda <chiiph@gentoo.org> PyQt4-4.7.3.ebuild,
  +files/PyQt4-4.7.3-qreal_float_support.patch:
  Add patch for qreal/float support in ARM wrt bug 322349

  03 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> PyQt4-4.7.3.ebuild:
  x86 stable wrt bug 315775

  25 May 2010; Markos Chandras <hwoarang@gentoo.org> PyQt4-4.7.3.ebuild:
  Stable on amd64 wrt bug 315775

  23 Apr 2010; Theo Chatzimichos <tampakrap@gentoo.org> PyQt4-4.7.ebuild,
  PyQt4-4.7.2.ebuild, PyQt4-4.7.3.ebuild:
  Fix sip dep in PyQt4 ebuilds

*PyQt4-4.7.3 (17 Apr 2010)

  17 Apr 2010; Markos Chandras <hwoarang@gentoo.org> +PyQt4-4.7.3.ebuild:
  Version bump

  11 Apr 2010; <nixnut@gentoo.org> PyQt4-4.7.ebuild:
  ppc stable #301105

*PyQt4-4.7.2 (18 Mar 2010)

  18 Mar 2010; Ben de Groot <yngwin@gentoo.org> +PyQt4-4.7.2.ebuild,
  +files/PyQt4-4.7.2-configure.py.patch:
  Version bump. ChangeLog is no longer shipped. Update patch.

  03 Mar 2010; Christian Faulhammer <fauli@gentoo.org> PyQt4-4.7.ebuild:
  stable x86, bug 301105

  02 Mar 2010; Samuli Suominen <ssuominen@gentoo.org> PyQt4-4.7.ebuild:
  amd64 stable wrt #301105

  16 Feb 2010; Jonathan Callen <abcd@gentoo.org>
  -files/PyQt4-4.4.4-qgraphicsproxywidget-avoid-event-callback-loop.patch,
  -files/fix_license_check.patch:
  Drop old patches

  10 Feb 2010; Jeroen Roovers <jer@gentoo.org> PyQt4-4.6.2.ebuild:
  Stable for HPPA (bug #300713).

  08 Feb 2010; Christian Faulhammer <fauli@gentoo.org> PyQt4-4.6.2.ebuild:
  stable x86, bug 300713

  02 Feb 2010; Alex Alexander <wired@gentoo.org> PyQt4-4.5.4-r4.ebuild,
  PyQt4-4.6.2.ebuild:
  updated SRC_URI to use gentoo mirrors, upstream doesn't provide these