@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/qscintilla-python
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/qscintilla-python/ChangeLog,v 1.58 2010/07/05 14:01:24 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/qscintilla-python/ChangeLog,v 1.59 2010/07/13 08:12:59 hwoarang Exp $
+
+*qscintilla-python-2.4.4 (13 Jul 2010)
+
+  13 Jul 2010; Markos Chandras <hwoarang@gentoo.org>
+  +qscintilla-python-2.4.4.ebuild:
+  Version bump
 
   05 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
   qscintilla-python-2.4.3.ebuild:
