@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/sip
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/sip/ChangeLog,v 1.167 2010/07/06 18:41:15 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/sip/ChangeLog,v 1.168 2010/07/13 08:09:38 hwoarang Exp $
+
+*sip-4.10.3 (13 Jul 2010)
+
+  13 Jul 2010; Markos Chandras <hwoarang@gentoo.org> +sip-4.10.3.ebuild:
+  Version bump
 
   06 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   sip-4.8.2.ebuild, sip-4.8.2-r1.ebuild, sip-4.9.3-r1.ebuild,
